--- a/sentinel/replica-6380.conf
+++ b/sentinel/replica-6380.conf
@@ -366,7 +366,7 @@ dir "/usr/local/var/db/redis"
 #    network partition replicas automatically try to reconnect to masters
 #    and resynchronize with them.
 #
-# replicaof <masterip> <masterport>
+replicaof 127.0.0.1 6379
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the replica to authenticate before
